--- a/SportsTech.Web/Web.config
+++ b/SportsTech.Web/Web.config
@@ -19,7 +19,7 @@
   </appSettings>
   <system.web>
     <globalization culture="en-NZ" uiCulture="en-NZ" />
-    <authentication mode="None" />
+    <!--<authentication mode="None" />-->
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
